--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,8 @@
 name: Build and deploy
-on: [push]
+on:
+  - push
+  - schedule:
+    - cron:  '*/5 * * * *'
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
