--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,9 @@
 name: Build and deploy
 on:
-  - push
-  - schedule:
+  push:
+    branches:
+      - main
+  schedule:
     - cron:  '*/5 * * * *'
 jobs:
   build-and-deploy:
